# souffle-analyzer

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  README.md  pyproject.toml  tox.ini
.github/: release_template.md
.github/workflows/: main.yml  release.yml  test.yml
docs/: NOTES.md  contributing.md  faq.md  notes.md  usage.md
scripts/: debug.py  run_parser.py
src/souffle_analyzer/: __main__.py  analysis.py  ast.py  handler.py  language.py  logging.py  lsp.py  main.py  metadata.py  parser.py  printer.py  rpc.py  server.py  sourceutil.py
src/souffle_analyzer/visitor/: code_action_visitor.py  collect_declaration_references_visitor.py  collect_references_visitor.py  definition_visitor.py  diagnostic_visitor.py  find_references_visitor.py  get_node_under_cursor_visitor.py  get_node_visitor.py  hover_visitor.py  resolve_declaration_visitor.py  simple_semantic_check_visitor.py  type_check_visitor.py  type_definition_visitor.py  type_infer_visitor.py  visitor.py
tests/: conftest.py  test_code_action.py  test_completion.py  test_definition.py  test_diagnostic.py  test_hover.py  test_parser.py  test_printer.py  test_references.py  test_rpc.py  test_sourceutil.py  test_type_definition.py
tests/__snapshots__/test_code_action/: test_hover[example1.dl].snapshot  test_hover[example3.dl].snapshot
tests/__snapshots__/test_definition/: test_definition[example1.dl].snapshot  test_definition[example2.dl].snapshot  test_definition[types2.dl].snapshot
tests/__snapshots__/test_diagnostic/: test_diagnostic[semantic_arity1.dl].snapshot
tests/__snapshots__/test_hover/: test_hover[example1.dl].snapshot  test_hover[example2.dl].snapshot  test_hover[types2.dl].snapshot
tests/__snapshots__/test_parser/: test_parser[example1.dl].snapshot  test_parser[example2.dl].snapshot  test_parser[include_preproc_directive.dl].snapshot  test_parser[subsumption1.dl].snapshot  test_parser[syntax_error_1.dl].snapshot  test_parser[syntax_incomplete1.dl].snapshot  test_parser[types1.dl].snapshot  test_parser[types2.dl].snapshot  test_parser[types3.dl].snapshot
tests/__snapshots__/test_printer/: test_printer[example1.dl].snapshot  test_printer[subsumption1.dl].snapshot  test_printer[syntax_error_1.dl].snapshot  test_printer[types1.dl].snapshot
tests/__snapshots__/test_references/: test_references[example1.dl].snapshot  (+2 more)
tests/ast/: test_comment.py
tests/testdata/: autocomplete.dl  example0.dl  example1.dl  example2.dl  example3.dl  include_preproc_directive.dl  semantic_arity1.dl  subsumption1.dl  syntax_error_1.dl  syntax_incomplete1.dl  types1.dl  types2.dl  types3.dl
tests/util/: helper.py
tree-sitter-souffle/: .clang-format  package-lock.json  package.json  pyproject.toml  regression.py
tree-sitter-souffle/src/: grammar.json  node-types.json
vscode/: .eslintignore  .eslintrc.js  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode/client/: package-lock.json  package.json
(+29 files in other folders)
