[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "souffle-analyzer"
description = "A Souffle language server, bundled with other utilities for the language."
readme = "README.md"
keywords = [
    "souffle", "lsp", "language-server", "code-analysis", "ide", "text-editor",
]
version = "0.0.1"
dependencies = [
    "lsprotocol>=2025.0.0",
    # TODO: Need to upgrade to 0.25.0 which uses the new ABI 15
    # which is currently not yet released, so we install from source
    # "tree-sitter>=0.25.0",
    "tree-sitter@git+https://github.com/tree-sitter/py-tree-sitter@24fcfe0ed8cdd8cc49756a52cfc135d42e083378",
    "tree-sitter-souffle@git+https://github.com/nathanwn/tree-sitter-souffle@99b752096302c46e06028e39a92492d2a779be77",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "coverage",
    "covdefaults",
    "hypothesis",
    "pytest",
]
dev = [
    "pre-commit",
    "tox",
    "souffle_analyzer[test]",
]

[project.scripts]
souffle-analyzer = "souffle_analyzer.__main__:main"

[tool.setuptools.packages.find]
# Note: set this if we are using src layout.
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"

[tool.coverage.run]
branch = true

[tool.coverage.paths]
# Note: set this if we are using src layout.
source = [
    "src"
]

[tool.coverage.report]
show_missing = true

[tool.pyright]
include = ["tests"]
